# tool-service-api

./: .gitignore  README.md
MCP_service/: MCP_service.csproj  Program.cs
MCP_service/ToolRegistry/: CrmTools.cs  DynamicToolProxy.cs  FinanceTools.cs  LeasingTools.cs  RemoteSupportTools.cs  SharedHelpers.cs  SupportTools.cs
Sample_MCP/: main.py  server.py
dotnet_service/MyDotNetApi/: MyDotNetApi.csproj  MyDotNetApi.http  Program.cs  Startup.cs  appsettings.json
dotnet_service/MyDotNetApi/Controllers/: ApiController.cs
dotnet_service/office_mcp_dotnet/: Program.cs  PropertyMcpServer.csproj
fastapi_service/: agent_sdk.py  decorators.py  main.py  mcp_client.py  metadata_loader.py  models.py  testing.py  utils.py
fastapi_service/mcp_project/: db.py  main.py  pyproject.toml  server.py
fastapi_service/mcp_project/loaders/: dynamic_loader.py
fastapi_service/mcp_project/tools/: math_tools.py
fastapi_service/office_mcp/: property_response_510835.json  request.py  server.py
fastapi_service/office_mcp_client/: agent_client.py  main.py  pyproject.toml
fastapi_service/tool_data/: tools.json
fastapi_service/tools/: __init__.py  site_tool.py  tool.py  weather_tool.py
mcp_on_stdio/: pyproject.toml  server.py
mcp_project/: LLM_test.py  MCP_docs.txt  config.py  dynamic_loader.py  main.py  models.py  pyproject.toml  testmain.py  tool_loader.py
mcp_project/tools/: __init__.py  string_tools.py
office_mcp/: property_response_506589.json  pyproject.toml  request.py  server.py
office_mcp/tools/: property_tools.py
web_http_sse/: main.py  pyproject.toml
(+19 files in other folders)
