[project]
name = "office_mcp_client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.9.0",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.0",
    "openai-agents>=0.0.15",
    "starlette>=0.46.2",
]
